# graft

./: .gitignore  ANNOUNCEMENT_v1.0.0.md  BUILD_FIXES_v1.0.0.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_TAGS.md  LAYOUT_OPTIMIZATION.md  LICENSE  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION.md  PHASE_0_CHECKLIST.md  PHASE_10.1_STATUS.md  PHASE_10_ACTUAL_STATUS.md  PHASE_10_COMPLETE.md  PHASE_10_CURRENT_STATUS.md  PHASE_10_FINAL_STATUS.md  PHASE_10_FINAL_VERIFICATION.md  PHASE_10_KICKOFF.md  PHASE_10_PLAN.md  PHASE_2_CHANGELOG.md  PHASE_2_CHECKLIST.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_2_TESTING_REPORT.md  PHASE_3_ARCHITECTURE.md  PHASE_3_COMPLETE.md  PHASE_3_SUMMARY.md  PHASE_4_PLAN.md  PHASE_5_COMPLETE.md  PHASE_5_PLAN.md  PHASE_6_COMPLETE.md  PHASE_6_PLAN.md  PHASE_7_COMPLETION_REPORT.md  PHASE_7_FINAL_COMPLETION.md  PHASE_7_PLAN.md  PHASE_7_SUMMARY.md  PHASE_7_TESTING_GUIDE.md  PHASE_8_BUGFIXES.md  PHASE_8_COMPLETE.md  (+40 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ci.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
all-tests/: CommitGraph.test.tsx  CommitListWithGraph.test.tsx  QuickSearch.test.tsx  RecentReposList.test.tsx  StagingArea.basic.test.tsx  StagingArea.test.tsx  ThemeToggle.test.tsx  graphLayout.performance.test.ts
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  RESEARCH.md  ROADMAP.md  SECURITY.md
scripts/: graphLayout-benchmark.cjs  graphLayout-benchmark.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+64 files in other folders)
