[package]
name = "graft"
version = "1.0.3"
description = "A fast, beautiful, keyboard-first Git GUI that doesn't suck"
authors = ["Graft Contributors"]
license = "MIT"
repository = "https://github.com/graft-project/graft"
edition = "2021"

[lib]
name = "graft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
chrono = "0.4"
